# Datalab2

./: Classes.py  Functions.py  README.md  Report.ipynb  Report_Updated.ipynb  Samenwerkingsovereenkomst.md  pyproject.toml
modules/: Classes.py  __init__.py
